Bug 211266 void nsHTMLEntities::AddRefTable doesn't check the return value of PL_DHashTableInit r=axel sr=heikki